chipper before