@@ -3,15 +3,19 @@ package com.safelogj.limserver.handler;
 import com.safelogj.limserver.DatabaseManager;
 import com.safelogj.limserver.LimController;
 import com.safelogj.limserver.model.Message;
+import com.safelogj.limserver.model.User;
 import com.safelogj.limserver.request.SendMessageRequest;
 import com.safelogj.limserver.response.BaseResponse;
 import com.sun.net.httpserver.HttpExchange;
+
+import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URLEncoder;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Locale;
 import java.util.UUID;
@@ -25,44 +29,37 @@ public class MediaUploadHandler extends BaseHandler {
             sendMethodError(exchange, response);
             return;
         }
-        String contentLengthHeader = exchange.getRequestHeaders().getFirst("Content-Length");
-        if (contentLengthHeader != null) {
-            long fileSize = Long.parseLong(contentLengthHeader);
-            if (fileSize > DatabaseManager.FILE_SIZE_LIMIT) { // 50 MB
-                response.status = BaseResponse.ERROR;
-                response.message = "File is too large (max 50MB)";
-                sendResponse(exchange, 413, response);
-                return;
-            }
-        } else {
+        if (!isSmallFile(exchange.getRequestHeaders().getFirst("Content-Length"))) { // 50 MB
             response.status = BaseResponse.ERROR;
-            response.message = "Content-Length header is missing";
-            sendResponse(exchange, 400, response);
+            response.message = "File is too large (max 50MB)";
+            sendResponse(exchange, 413, response);
             return;
         }
 
         String username = exchange.getRequestHeaders().getFirst("X-Username");
         String password = exchange.getRequestHeaders().getFirst("X-Password");
-        String senderId = exchange.getRequestHeaders().getFirst("X-Sender-Id");
-        String chatIdStr = exchange.getRequestHeaders().getFirst("X-Chat-Id");
-        String messageText = encodeToHeader(exchange.getRequestHeaders().getFirst("X-Message-Text"));
-        String messageType = exchange.getRequestHeaders().getFirst("X-Message-Type");
-        String originalName = encodeToHeader(exchange.getRequestHeaders().getFirst("X-File-Name"));
-        String chatName = encodeToHeader(exchange.getRequestHeaders().getFirst("X-Chat-Name"));
+        long senderId = parsePositiveLong(exchange.getRequestHeaders().getFirst("X-Sender-Id"));
+        long chatId = parsePositiveLong(exchange.getRequestHeaders().getFirst("X-Chat-Id"));
+        String text = decodeFromHeader(exchange.getRequestHeaders().getFirst("X-Message-Text"));
+        String type = exchange.getRequestHeaders().getFirst("X-Message-Type");
+        String fileName = decodeFromHeader(exchange.getRequestHeaders().getFirst("X-File-Name"));
+        String chatName = decodeFromHeader(exchange.getRequestHeaders().getFirst("X-Chat-Name"));
 
-        if (!SendMessageRequest.isValidHeaders(username, password, originalName)  || !isUsernameValid(username)) {
+        if (!SendMessageRequest.isValidHeaders(username, password, senderId, chatId, text, type, fileName, chatName)
+                || !isUsernameValid(username)) {
             sendFieldMissingError(exchange, response);
             return;
         }
 
-        if (LimController.dbManager.authenticateUser(username, password) == null) {
+        User user = LimController.dbManager.authenticateUser(username, password);
+        if (user == null) {
             sendUnauthorizedError(exchange, response);
             return;
         }
         // 2. Генерация уникального имени файла
         String extension = LimController.EMPTY_STRING;
-        int dotIndex = originalName.lastIndexOf('.');
-        if (dotIndex >= 0) extension = originalName.substring(dotIndex).toLowerCase(Locale.US);
+        int dotIndex = fileName.lastIndexOf('.');
+        if (dotIndex >= 0) extension = fileName.substring(dotIndex).toLowerCase(Locale.US);
         long timestamp = System.currentTimeMillis();
         String serverFileName = timestamp + "_" + UUID.randomUUID().toString().substring(0, 8) + extension;
         File targetFile = new File(LimController.MEDIA_PATH, serverFileName);
@@ -80,17 +77,15 @@ public class MediaUploadHandler extends BaseHandler {
                 fos.write(buffer, 0, bytesRead);
             }
             // 4. Возвращаем клиенту имя файла на сервере
-            long chatId = Long.parseLong(chatIdStr);
-            long messageId = LimController.dbManager.saveMessage(chatId, Long.parseLong(senderId), messageText,
-                    messageType, timestamp, serverFileName, originalName, chatName);
+            long messageId = LimController.dbManager.saveMessage(chatId, user.id, text,
+                    type, chatName, serverFileName, fileName, timestamp);
             if (messageId != Message.INVALID_MSG_ID) {
-                response.timestamp = timestamp;
                 response.messageId = messageId;
-                response.chatId = chatId;
-                response.message = "file uploaded successfully: " + originalName;
+                response.timestamp = timestamp;
+                response.message = "file uploaded successfully: " + fileName;
                 sendSuccess(exchange, response);
             } else {
-                throw new IOException("Save message after file upload error " + originalName);
+                throw new IOException("Save message after file upload error " + fileName);
             }
 
         } catch (Exception e) {
@@ -104,12 +99,26 @@ public class MediaUploadHandler extends BaseHandler {
         }
     }
 
-    private String encodeToHeader(String text) {
+    private String decodeFromHeader(String text) {
         if (text == null || text.isEmpty()) return LimController.EMPTY_STRING;
         try {
-            return URLEncoder.encode(text, "UTF-8");
+            return URLDecoder.decode(text, StandardCharsets.UTF_8);
         } catch (Exception e) {
             return LimController.EMPTY_STRING;
+        }
+    }
+
+    private boolean isSmallFile(@Nullable String sizeStr) {
+        if (sizeStr == null) return false;
+        long size = parsePositiveLong(sizeStr);
+        return size > 0 && size <= DatabaseManager.FILE_SIZE_LIMIT;
+    }
+
+    private long parsePositiveLong(String value) {
+        try {
+            return Long.parseLong(value);
+        } catch (NumberFormatException e) {
+            return 0;
         }
     }
 }
